Fix import paths and install uuid package

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,12 @@
     "baseUrl": ".",
     "paths": {
       "@/*": [
+        "./*"
+      ],
+      "@/app/*": [
+        "./app/*"
+      ],
+      "@/src/*": [
         "./src/*"
       ]
     },
