--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/react": "18.2.0",
     "@types/react-dom": "18.2.0",
     "autoprefixer": "10.4.17",
+    "eslint": "^9.23.0",
     "postcss": "8.4.35",
     "puppeteer": "^22.0.0",
     "tailwindcss": "3.4.1",
