--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "start": "next start",
     "lint": "eslint --config .eslintrc.json .",
     "capture-screenshots": "ts-node scripts/capture-game-screenshots.js",
-    "recapture-specific": "node scripts/recapture-specific-games.js"
+    "recapture-specific": "node scripts/recapture-specific-games.js",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage"
   },
   "dependencies": {
     "@heroicons/react": "^2.0.18",
