--- a/package.json
+++ b/package.json
@@ -6,12 +6,13 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint --config .eslintrc.json .",
-    "capture-screenshots": "ts-node scripts/capture-game-screenshots.js",
-    "recapture-specific": "node scripts/recapture-specific-games.js",
+    "lint": "eslint .",
+    "format": "prettier --write \"**/*.{ts,tsx,js,jsx,json,css,md}\"",
     "test": "jest",
     "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage"
+    "test:coverage": "jest --coverage",
+    "capture-screenshots": "ts-node scripts/capture-game-screenshots.js",
+    "recapture-specific": "node scripts/recapture-specific-games.js"
   },
   "dependencies": {
     "@heroicons/react": "^2.0.18",
@@ -54,5 +55,27 @@
     "tailwindcss": "3.4.1",
     "ts-node": "^10.9.2",
     "typescript": "5.3.3"
+  },
+  "jest": {
+    "testEnvironment": "jsdom",
+    "setupFilesAfterEnv": ["<rootDir>/jest.setup.js"],
+    "moduleNameMapper": {
+      "^@/(.*)$": "<rootDir>/$1",
+      "\\.(css|less|scss|sass)$": "identity-obj-proxy"
+    },
+    "testPathIgnorePatterns": [
+      "<rootDir>/node_modules/",
+      "<rootDir>/.next/"
+    ],
+    "transform": {
+      "^.+\\.(js|jsx|ts|tsx)$": ["babel-jest", { "presets": ["next/babel"] }]
+    },
+    "collectCoverageFrom": [
+      "**/*.{js,jsx,ts,tsx}",
+      "!**/*.d.ts",
+      "!**/node_modules/**",
+      "!**/.next/**",
+      "!**/coverage/**"
+    ]
   }
 }
